# matsuzawa-20260205-airas-papers-db

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/runs/: comparative-1-flan-t5-small-calc-svamp.yaml  comparative-1-mistral-7b-v0.3-calc-svamp.yaml  proposed-flan-t5-small-calc-svamp.yaml  proposed-mistral-7b-v0.3-calc-svamp.yaml
src/: evaluate.py  main.py  model.py  preprocess.py  train.py
